--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,7 +3,7 @@ security:
         our_db_provider:
             entity:
                 class: App\Entity\User
-                property: username
+
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
         App\Entity\User:
@@ -12,19 +12,19 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        admin:
-            pattern: ^/admin
-            anonymous: true
-            http_basic: true
         main:
             anonymous: true
             form_login:
                login_path: login
                check_path: login
+            logout:
+                path: /logout
+                target: /
             pattern:    ^/
             http_basic: ~
             provider: our_db_provider
 
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+#        - { path: ^/profile, roles: ROLE_USER }
