--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.0.8",
         "sensio/framework-extra-bundle": "^5.1",
         "stof/doctrine-extensions-bundle": "^1.3",
+        "swiftmailer/swiftmailer": "^6.0",
         "symfony/console": "^3.4",
         "symfony/debug-pack": "^1.0",
         "symfony/flex": "^1.0",
