--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "license": "proprietary",
     "require": {
         "php": "^7.0.8",
+        "easycorp/easyadmin-bundle": "^1.17",
         "sensio/framework-extra-bundle": "^5.1",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/asset": "^3.4",
@@ -15,6 +16,7 @@
         "symfony/maker-bundle": "^1.1",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^3.4",
+        "symfony/security-csrf": "^3.4",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/twig-bundle": "^3.4",
         "symfony/web-server-bundle": "^3.4",
