Add latest events /fetch (test)

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,10 @@ parameters:
     locale: 'en'
 
 services:
+    twig.extension.sortbyfield:
+        class: Snilius\Twig\SortByFieldExtension
+        tags:
+            - { name: twig.extension }
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
