--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.0.8",
         "easycorp/easyadmin-bundle": "^1.17",
         "sensio/framework-extra-bundle": "^5.1",
+        "snilius/twig-sort-by-field": "^0.1.5",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/asset": "^3.4",
         "symfony/console": "^3.4",
