--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/twig-bundle": "^3.4",
         "symfony/web-server-bundle": "^3.4",
-        "symfony/yaml": "^3.4"
+        "symfony/yaml": "^3.4",
+        "vich/uploader-bundle": "^1.8"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
