--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -9,3 +9,4 @@ vich_uploader:
             uri_prefix: '%media_uri_prefix%'
             upload_destination: '%kernel.project_dir%/public/media'
             inject_on_load: true
+            namer: vich_uploader.namer_uniqid
