--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
         "vich/uploader-bundle": "^1.8"
     },
     "require-dev": {
+        "doctrine/data-fixtures": "^1.3",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "hautelook/alice-bundle": "^2.0",
+        "nelmio/alice": "^3.2",
         "symfony/dotenv": "^3.4"
     },
     "config": {
