--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -15,12 +15,14 @@ easy_admin:
   entities:
     User:
       class: App\Entity\User
+      export_path: '%kernel.root_dir/../var/export/user'
+      password_encoding: { algorithm: 'bcrypt', cost: 12 }
       label: 'Utilisateurs'
       help: 'Un utilisateur peut être ADMIN ou USER.'
       list:
         title: 'Liste des utilisateurs'
         fields:
-          - id
+          - { property: username, label: 'Username' }
           - { property: firstName, label: 'Prénom' }
           - { property: lastName, label: 'Nom' }
           - email
@@ -30,12 +32,12 @@ easy_admin:
           - { property: exhibit, label: 'followExpo', type: boolean }
           - { property: party, label: 'followSoirées', type: boolean }
           - { property: weekend, label: 'followWeekends', type: boolean }
-          - { property: exhibitFollow, label: 'Expo' }
-          - { property: partyFollow, label: 'Soirées' }
-          - { property: weekendFollow, label: 'Weekends' }
+          - { property: exhibitFollow, label: 'Expo'}
+          - { property: partyFollow, label: 'Soirées'}
+          - { property: weekendFollow, label: 'Weekends'}
       form:
         fields:
-          - id
+          - { property: username, label: 'Username' }
           - { property: firstName, label: 'Prénom' }
           - { property: lastName, label: 'Nom' }
           - { property: password, label: 'Mot de passe' }
