--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "require": {
         "php": "^7.0.8",
         "easycorp/easyadmin-bundle": "^1.17",
+        "egeloen/ckeditor-bundle": "^6.0",
         "sensio/framework-extra-bundle": "^5.1",
         "snilius/twig-sort-by-field": "^0.1.5",
         "stof/doctrine-extensions-bundle": "^1.3",
