--- a/config/routes/easy_admin.yaml
+++ b/config/routes/easy_admin.yaml
@@ -1,8 +1,4 @@
-#easy_admin_bundle:
-#    resource: '@EasyAdminBundle/Controller/AdminController.php'
-#    prefix: /admin
-#    type: annotation
 easy_admin_bundle:
-    resource: App\Controller\AdminController
+    resource: '@EasyAdminBundle/Controller/AdminController.php'
     prefix: /admin
     type: annotation
