--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/security-bundle": "^3.4",
         "symfony/security-csrf": "^3.4",
         "symfony/swiftmailer-bundle": "^3.2",
+        "symfony/translation": "^3.4",
         "symfony/twig-bundle": "^3.4",
         "symfony/web-server-bundle": "^3.4",
         "symfony/yaml": "^3.4",
