--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
         "php": "^7.0.8",
         "easycorp/easyadmin-bundle": "^1.17",
         "egeloen/ckeditor-bundle": "^6.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "mashape/unirest-php": "^3.0",
         "sensio/framework-extra-bundle": "^5.1",
         "snilius/twig-sort-by-field": "^0.1.5",
         "stof/doctrine-extensions-bundle": "^1.3",
